sentinel_config/spec/test-fixtures/v0.18.13/errors_v2_import_block.txtar
-- sentinel.hcl --
// V2 style import schema
import "module" "module1" {
  source = "../something.sentinel"
}
-- astOut.json --
null
-- diagOut.txt --
ERROR: Only 1 labels (name) are expected for import blocks.:sentinel.hcl:1,16->1,25
